--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
 <!--        tareq activities-->
         <activity
             android:name=".NotificationActivity"
+            android:parentActivityName=".Home"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -70,6 +71,8 @@
 
         <activity
             android:name=".MyProfile"
+            android:parentActivityName=".Home"
+
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -79,6 +82,8 @@
 <!--        ibrahim activity-->
         <activity
             android:name=".product_view"
+            android:parentActivityName=".Home"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -86,6 +91,8 @@
         </activity>
         <activity
             android:name=".addproduct"
+            android:parentActivityName=".Home"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -93,6 +100,8 @@
         </activity>
         <activity
             android:name=".myproducts"
+            android:parentActivityName=".Home"
+
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
